--- a/dg.html
+++ b/dg.html
@@ -35,8 +35,11 @@ html,body{
   position:relative;
   display:flex;
   justify-content:center;
-  padding-top:40px;
-}
+  padding-top:120px;   /* increased */
+  padding-bottom:120px; /* increased */
+  min-height:600px;     /* ensures enough height */
+  overflow:visible;     /* IMPORTANT */
+  }
 
 .scroller{
   display:flex;
@@ -51,7 +54,9 @@ html,body{
 .track{
   display:flex;
   align-items:center;
-  padding-top:25px;
+  padding-top:40px;
+  padding-bottom:40px;
+  overflow:visible;   /* important */
 }
 
 .card{
