--- a/dg.html
+++ b/dg.html
@@ -91,7 +91,7 @@ html,body{
   overflow:hidden;
   backface-visibility:hidden;
   -webkit-backface-visibility:hidden;
-  box-shadow:0 6px 18px rgba(20,20,25,0.06);
+  box-shadow:0 20px 50px rgba(0,0,0,0.25);
 }
 
 .face img{
@@ -105,7 +105,8 @@ html,body{
 }
 
 .card.center{
-  transform:translateY(-25px);
+  transform:translateY(-33%);
+  z-index:50;
 }
 
 .card.selected{
