--- a/dg.html
+++ b/dg.html
@@ -56,8 +56,8 @@ html,body{
 .track{
   display:flex;
   align-items:flex-end;  /* KEY CHANGE */
-  padding-top:0;
-  padding-bottom:0;
+  padding-top:20px;
+  padding-bottom:20px;
   overflow:visible;
 }
 
