--- a/dg.html
+++ b/dg.html
@@ -36,8 +36,8 @@ html,body{
   display:flex;
   justify-content:center;
   align-items:flex-end;     /* KEY */
-  padding-top:60px;         /* reduce top padding */
-  padding-bottom:0;
+  padding-top:100px;         /* reduce top padding */
+  padding-bottom:20px;
   height:75vh;              /* better than fixed 600px */
   min-height:520px;
   overflow:visible;
