--- a/dg.html
+++ b/dg.html
@@ -93,7 +93,15 @@ html,body{
   overflow:hidden;
   backface-visibility:hidden;
   -webkit-backface-visibility:hidden;
-  box-shadow:0 20px 50px rgba(0,0,0,0.25);
+  box-shadow:
+  0 6px 12px rgba(0,0,0,0.35),
+  0 2px 4px rgba(0,0,0,0.25);
+}
+
+  .card.flipped .face{
+  box-shadow:
+    0 12px 24px rgba(0,0,0,0.4),
+    0 4px 8px rgba(0,0,0,0.3);
 }
 
 .face img{
