--- a/dg.html
+++ b/dg.html
@@ -36,10 +36,9 @@ html,body{
   display:flex;
   justify-content:center;
   align-items:flex-end;     /* KEY */
-  padding-top:160px;         /* reduce top padding */
-  padding-bottom:80px;
-  height:90vh;              /* better than fixed 600px */
-  min-height:520px;
+  height:auto;          /* remove forced tall height */
+  min-height:0;
+  padding:0;            /* remove artificial spacing */
   overflow:visible;
   }
 
@@ -56,8 +55,7 @@ html,body{
 .track{
   display:flex;
   align-items:flex-end;  /* KEY CHANGE */
-  padding-top:60px;
-  padding-bottom:40px;
+  padding:0;            /* remove top/bottom padding */
   overflow:visible;
 }
 
@@ -68,6 +66,7 @@ html,body{
   position:relative;
   scroll-snap-align:center;
   margin-right:calc(var(--card-w) * -1 * var(--overlap-factor));
+  margin-top:120px;   /* creates real lift space */
   transform-origin:center;
   transition:transform 300ms ease;
   cursor:pointer;
