--- a/dg.html
+++ b/dg.html
@@ -36,9 +36,10 @@ html,body{
   display:flex;
   justify-content:center;
   align-items:flex-end;     /* KEY */
-  height:auto;          /* remove forced tall height */
+  height:auto;           
   min-height:0;
-  padding:0;            /* remove artificial spacing */
+  padding-top:80px;
+  padding-bottom:80px;           
   overflow:visible;
   }
 
