--- a/dg.html
+++ b/dg.html
@@ -48,6 +48,7 @@ html,body{
   display:flex;
   width:100%;
   overflow-x:auto;
+  overflow-y:visible;
   scroll-snap-type:x mandatory;
   -webkit-overflow-scrolling:touch;
   scrollbar-width:none;
