--- a/dg.html
+++ b/dg.html
@@ -58,7 +58,8 @@ html,body{
 .track{
   display:flex;
   align-items:flex-end;  /* KEY CHANGE */
-  padding:0;            /* remove top/bottom padding */
+  padding-top:60px;
+  padding-bottom:40px;      
   overflow:visible;
 }
 
