--- a/dg.html
+++ b/dg.html
@@ -55,6 +55,11 @@ html,body{
 }
 .scroller::-webkit-scrollbar{ display:none; }
 
+.scroller,
+.track{
+  overflow:visible;
+}
+  
 .track{
   display:flex;
   align-items:flex-end;  /* KEY CHANGE */
