--- a/dg.html
+++ b/dg.html
@@ -15,7 +15,8 @@
 html,body{
   height:100%;
   margin:0;
-  font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
+  overflow:hidden;   /* prevents outer scroll */
+  font-family:"Inter",Inter,Arial,sans-serif;
   background:var(--bg);
 }
 
@@ -23,7 +24,7 @@ html,body{
   width:100%;
   max-width:640px;
   margin:0 auto;
-  min-height:100vh;
+  height:100%;
   padding:10px 18px;
   display:flex;
   flex-direction:column;
