--- a/dg.html
+++ b/dg.html
@@ -8,7 +8,7 @@
 <style>
 :root{
   --bg: #f5eee8;
-  --card-w: clamp(140px, 28vw, 300px);
+  --card-w: clamp(220px, 65vw, 420px);
   --overlap-factor: 0.70;
 }
 
@@ -29,7 +29,7 @@ html,body{
   display:flex;
   flex-direction:column;
   align-items:center;
-  overflow:visible;
+  overflow:hidden;
 }
 
 .viewport{
