--- a/dg.html
+++ b/dg.html
@@ -25,7 +25,7 @@ html,body{
   max-width:640px;
   margin:0 auto;
   height:100%;
-  padding:10px 18px;
+  padding:10px 0px;
   display:flex;
   flex-direction:column;
   align-items:center;
@@ -41,7 +41,9 @@ html,body{
   height:auto;           
   min-height:0;
   padding-top:10px;
-  padding-bottom:60px;           
+  padding-bottom:60px;
+  padding-left:18px;
+  padding-right:18px;
   overflow:visible;
   }
 
