--- a/dg.html
+++ b/dg.html
@@ -22,8 +22,8 @@ html,body{
 
 .app{
   width:100%;
-  max-width:640px;
-  margin:0 auto;
+  max-width:100%;
+  margin:0;
   height:100%;
   padding:0px 0px;
   display:flex;
