--- a/dg.html
+++ b/dg.html
@@ -140,15 +140,16 @@ html,body{
 }
 
 .revealPanel .label{
-  font-size:18px;
+  font-size:clamp(18px, 2.2vw, 28px);
   font-weight:600;
 }
 
 .revealPanel .word{
-  font-size:22px;
+  font-size:clamp(22px, 3vw, 38px);
   font-weight:800;
   text-transform:uppercase;
 }
+
 </style>
 </head>
 
