--- a/dg.html
+++ b/dg.html
@@ -150,6 +150,20 @@ html,body{
   text-transform:uppercase;
 }
 
+/* ========================= */
+/* TABLET + LARGER SCREENS  */
+/* ========================= */
+
+@media (min-width: 768px){
+
+  .viewport{
+    padding-top:80px;
+    padding-bottom:140px;
+  }
+
+}
+
+  
 </style>
 </head>
 
