--- a/dg.html
+++ b/dg.html
@@ -60,7 +60,7 @@ html,body{
 
 .track{
   display:flex;
-  align-items:flex-end;  /* KEY CHANGE */
+  align-items:flex-end;   
   padding-top:40px;
   padding-bottom:40px;      
   overflow:visible;
@@ -162,6 +162,15 @@ html,body{
   }
 
 }
+
+  @media (min-width: 768px){
+
+  .card.center{
+    transform:translateY(-20%);
+  }
+
+}
+
 
   
 </style>
