--- a/dg.html
+++ b/dg.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Daily Guidance</title>
 
+const DAY_MS = 24 * 60 * 60 * 1000;
+
 <style>
 :root{
   --bg: #f5eee8;
