--- a/dg.html
+++ b/dg.html
@@ -387,6 +387,8 @@ window.addEventListener('load', () => {
         revealWord.textContent = keyword;
         revealPanel.style.display = "flex";
 
+        document.getElementById('revisitHeader').style.display = "block";
+
       }
 
     }else{
