--- a/im.html
+++ b/im.html
@@ -22,7 +22,10 @@ html,body{
 
 .app{
   width:100%;
+  max-width:100%;
+  margin:0;
   height:100%;
+  padding:0px 0px;
   display:flex;
   flex-direction:column;
   align-items:center;
@@ -31,10 +34,16 @@ html,body{
 
 .viewport{
   width:100%;
+  position:relative;
   display:flex;
   justify-content:center;
-  align-items:flex-end;
-  padding:10px 18px 60px 18px;
+  align-items:flex-end;   
+  height:auto;           
+  min-height:0;
+  padding-top:10px;
+  padding-bottom:60px;
+  padding-left:18px;
+  padding-right:18px;
   overflow:visible;
 }
 
@@ -42,6 +51,7 @@ html,body{
   display:flex;
   width:100%;
   overflow-x:auto;
+  overflow-y:visible;
   scroll-snap-type:x mandatory;
   -webkit-overflow-scrolling:touch;
   scrollbar-width:none;
@@ -50,8 +60,10 @@ html,body{
 
 .track{
   display:flex;
-  align-items:flex-end;
-  padding:40px 0;
+  align-items:flex-end;   
+  padding-top:40px;
+  padding-bottom:40px;      
+  overflow:visible;
 }
 
 .card{
@@ -92,6 +104,12 @@ html,body{
   0 2px 6px rgba(0,0,0,0.25);
 }
 
+   .card.flipped .face{
+  box-shadow:
+    0 6px 12px rgba(0,0,0,0.4),
+    0 2px 6px rgba(0,0,0,0.3);
+}
+  
 .face img{
   width:100%;
   height:100%;
@@ -114,12 +132,25 @@ html,body{
   opacity:0;
 }
 
+  .revealPanel{
+  margin-top:-30px;
+  display:none;
+  flex-direction:column;
+  align-items:center;
+}
+ /* ========================= */
+/* TABLET + LARGER SCREENS  */
+/* ========================= */
+
 @media (min-width:768px){
   .viewport{
     padding-top:30px;
     padding-bottom:40px;
   }
-  .card.center{
+}
+  @media (min-width: 768px){
+
+    .card.center{
     transform:translateY(-20%);
   }
 }
@@ -153,9 +184,7 @@ const IMAGES = Array.from({length: TOTAL_CARDS}, (_, i) => {
 /* 
 Because filenames are:
 01 guided from within.png
-02 at peace.png
-etc.
-
+02 at peace.png etc.
 We will dynamically find matching file names by scanning index only.
 So instead we generate full URLs below.
 */
@@ -229,12 +258,13 @@ scroller.addEventListener('scroll', () => {
   requestAnimationFrame(updateCenter);
 });
 
-/* ---------- CLICK ---------- */
+/* ---------- SELECT CENTER CARD ---------- */
 scroller.addEventListener('click', ()=>{
 
   const center = document.querySelector('.card.center');
   if(!center || center.classList.contains('selected')) return;
 
+/* -------- LAZY LOAD FRONT IMAGE -------- */
   const img = center.querySelector('.face.front img');
   if(!img.src){
     img.src = img.dataset.src;
@@ -259,7 +289,7 @@ scroller.addEventListener('click', ()=>{
 
 });
 
-/* ---------- LOAD ---------- */
+/* ---------- INITIAL ---------- */
 window.addEventListener('load', () => {
 
   requestAnimationFrame(() => {
@@ -267,7 +297,8 @@ window.addEventListener('load', () => {
     const halfWidth = scroller.scrollWidth / 2;
     scroller.scrollLeft = halfWidth / 2;
     setTimeout(updateCenter, 50);
-
+    
+/* -------- CHECK FOR SAVED DAILY CARD -------- */
     const saved = JSON.parse(localStorage.getItem('iamDailyCard'));
 
     const today = new Date();
@@ -279,7 +310,8 @@ window.addEventListener('load', () => {
       const savedCard = cards[saved.cardIndex];
 
       if(savedCard){
-
+    
+        /* Lazy load */
         const img = savedCard.querySelector('.face.front img');
         if(!img.src){
           img.src = img.dataset.src;
@@ -287,6 +319,7 @@ window.addEventListener('load', () => {
 
         savedCard.classList.add('selected','flipped');
 
+    // SCROLL DIRECTLY TO THAT CARD
         savedCard.scrollIntoView({
           inline:"center",
           block:"nearest"
@@ -301,9 +334,10 @@ window.addEventListener('load', () => {
       localStorage.removeItem('iamDailyCard');
     }
 
-  });
+}); // <-- closes requestAnimationFrame
 
-});
+}); // <-- closes window.addEventListener
+
 </script>
 </body>
 </html>
